--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,23 @@ jobs:
           APK=$(find app/build/outputs/apk -name '*arm64-v8a*.apk')
           APK=$(dirname $APK)
           echo "APK=$APK" >> $GITHUB_ENV
+      - uses: r0adkll/sign-android-release@v1
+        id: sign_app
+        with:
+          releaseDirectory: ${{ env.APK }}
+          signingKeyBase64: ${{ secrets.KEYSTORE_FILE }}
+          alias: ${{ secrets.KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_PASSWORD }}
+      - name: Clean Up
+        run: |
+          cd ${{ env.APK }}
+          rm signingKey.jks
+          rm $(ls | grep -v '\-signed')
+          for file in NB4A*.apk; do
+              new_file="${file/NB4A/CB4A}"
+              new_file="${new_file//unsigned-/}"
+              mv "$file" "$new_file"
+          done
       - uses: actions/upload-artifact@v3
         with:
           name: APKs
